Bug 302671 - umbrello freezes on c++ import
Summary: umbrello freezes on c++ import
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR major
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
: 252206 302404 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-06-28 00:01 UTC by Ralf Habacker
Modified: 2013-11-06 17:15 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2012-06-28 00:01:28 UTC
Importing c++ files containing escape sequences in strings let umbrello freeze.

Reproducible: Always

Steps to Reproduce:
1. start umbrello
2. import /usr/include/wchar.h

Actual Results:  
umbrello freeze

Expected Results:  
umbrello should not freeze
Comment 1 Ralf Habacker 2012-07-02 16:38:44 UTC
SVN commit 1303762 by habacker:

Cancel file import in case of internal lexer errors and print a related error message. It is better to have a single file not imported instead of an application freeze. Remaining parse problems could be fixed now easier.


 M  +2 -1      cppimport.cpp  
 M  +6 -4      kdevcppparser/driver.cpp  
 M  +1 -1      kdevcppparser/driver.h  
 M  +7 -4      kdevcppparser/lexer.cpp  
 M  +2 -2      kdevcppparser/lexer.h  
 M  +8 -1      kdevcppparser/preprocesslexer.cpp  
 M  +1 -1      kdevcppparser/preprocesslexer.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1303762
Comment 2 Ralf Habacker 2012-07-02 16:38:47 UTC
SVN commit 1303763 by habacker:

Refactored code import wizard to be able to show import errors.


 M  +14 -10    codeimpstatuspage.cpp  
 M  +1 -1      codeimpstatuspage.h  
 M  +3 -3      codeimpthread.cpp  
 M  +2 -1      codeimpthread.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1303763
Comment 3 Ralf Habacker 2012-07-07 08:36:59 UTC
*** Bug 302404 has been marked as a duplicate of this bug. ***
Comment 4 Ralf Habacker 2012-07-07 08:52:16 UTC
*** Bug 252206 has been marked as a duplicate of this bug. ***
Comment 5 Ralf Habacker 2013-11-06 17:15:44 UTC
apply fixed bug from 4.9.0 changelog