Cancel file import in case of internal lexer errors and print a related error message. It is better to have a single file not imported instead of an application freeze. Remaining parse problems could be fixed now easier.

BUG: 302671

svn path=/trunk/KDE/kdesdk/umbrello/; revision=1303762